<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="silantyevmn.ru.developerinterview.Lesson1.ConvertActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_convert_celsius_to_fahrenheit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="C/F" />

            <RadioButton
                android:id="@+id/radio_convert_fahrenheit_to_celsius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="F/C" />

            <RadioButton
                android:id="@+id/radio_convert_kilometrs_to_mile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="км/мили" />

            <RadioButton
                android:id="@+id/radio_convert_mile_to_kilomenrs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="мили/км" />
        </RadioGroup>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/celsiusLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/inputValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fahrenheitLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/outputValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonToConvert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="Конвертирование" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
